# paralelni-algoritmy-i

./: .gitattributes  CMakeLists.txt  README.md
project_1/: README.md  srflp.cpp
project_2/: README.md  affinity_propagation.cpp  assigment_matrix.csv  five_participants  five_participants.csv  iris.csv
project_3/: README.md  page_rank.cpp  web-test.txt
